force-app/main/default/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Applicable_Department__c</fullName>
        <label>Applicable Department</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>QUEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Audience__c</fullName>
        <inlineHelpText>Audience for the article content.</inlineHelpText>
        <label>Article Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employer Group</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Internal Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_SME_Department_s__c</fullName>
        <description>The department(s) who is/are the subject matter experts (SMEs) who can validate whether the information displayed in the article is accurate and current.  Also includes the department(s) contact(s) information.</description>
        <inlineHelpText>The department(s) who is/are the subject matter experts (SMEs) who can validate whether the information displayed in the article is accurate and current.  Also includes the department(s) contact(s) information.</inlineHelpText>
        <label>Article SME Department(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Article_SME_Last_Review_Date__c</fullName>
        <description>Last date the article department subject matter expert (SME) reviewed the article content for up-to-date accuracy.</description>
        <inlineHelpText>Last date the article department subject matter expert (SME) reviewed the article content for up-to-date accuracy.</inlineHelpText>
        <label>Article SME Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Article_SME_Next_Review_Date__c</fullName>
        <description>Next date the article department subject matter expert (SME) to review the article content for up-to-date accuracy.</description>
        <inlineHelpText>Next date the article department subject matter expert (SME) to review the article content for up-to-date accuracy.</inlineHelpText>
        <label>Article SME Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Article_Source__c</fullName>
        <label>Article Source</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Change_History__c</fullName>
        <inlineHelpText>Summary of changes made to the article</inlineHelpText>
        <label>Change History</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_Content__c</fullName>
        <label>External Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Plan_LOB__c</fullName>
        <inlineHelpText>Don&apos;t need this anymore as we will have categories for this information - Plan type line of business (LOB) applicable to the article content.</inlineHelpText>
        <label>Plan LOB</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Akamai Advantage (AA)</fullName>
                </value>
                <value>
                    <fullName>Essential Advantage</fullName>
                </value>
                <value>
                    <fullName>Private Business (PB)</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>Federal Plan 87</fullName>
                </value>
                <value>
                    <fullName>EUTF</fullName>
                </value>
                <value>
                    <fullName>QUEST</fullName>
                </value>
                <value>
                    <fullName>Federal Employee Program (FEP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question for FAQ</description>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Links__c</fullName>
        <label>Related Links</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Supplemental_Keywords__c</fullName>
        <label>Supplemental Keywords</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>This can be used for simple question and answer articles</description>
        <label>FAQ</label>
    </recordTypes>
</CustomObject>